methods.basics.Methods.scala.error
Erreur de compilation :
Methods:4: error: value ++ is not a member of Int
    nbPas++;
         ^