methods.basics.Methods.scala.code
def goAndGet() {
  var nbPas = 0;
  while(!estSurBiscuit()){
    nbPas++;
  }
  prendBiscuit();
  for(i<-0 to nbPas){
    recule();
  }
  poseBiscuit();
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}